# multi_camera_tracking_labelling_tool

./: .gitignore  GT_vis.py  LICENSE  MCVT_data_creation.py  README.md  Vehicle Tracking Example.xlsx  cross_camera_match.py  cross_camera_post_process.py  detect_correction.py  detection_crop_tool.py  detection_post_process.sh  detection_result_process.py  eval_det.py  eval_label.py  eval_sct.py  filter_static_sct.py  merged_results_vis.py  multi_camera_ground_truth.txt  pyproject.toml  reid_post_process.sh  sct_comparison.bash  sct_correction.py  sct_post_process.sh  sct_process_temp.py  sct_tracklet_post_process.py  sct_video_process.py  sct_vis.py  tracklet_post_process.py  wipe_point.py
CLM/: CLM_GT.py  CLM_res_comparison.py  MTC_time_transition_GT.json  cam_pair.json
geo-mapping/: CameraFit.py  README.md  autocameratransform.py  autofit.example.yaml
tem_res/: Vehicle Tracking.xlsx
temp_res/: Vehicle Tracking Final copy.xlsx  Vehicle Tracking.xlsx  Vehicle_statistic.xlsx  Vehicle_statistics.xlsx  Vehicle_statistics_mk2.xlsx  Vehicle_statistics_mk3.xlsx
utils/: CLM_vis.py  bbox_count.py  det_filter2.py  det_label_plot.py  det_results_crop_tool.py  det_wipe_point.py  detection_crop_tool.py  detection_eval.py  eval_attributes.py  eval_attributes_gpt.py  final_redict.json  frame_grab.py  get_missing_vehicle.py  mcvt_vis.py  read_reid_dict.py  reid_subset_creation.py  sct2det.py  vehcle_num_count.py  vehicle_num_coun1.py  vehicle_num_count.py  vehicle_statistics.py
vis/: README.md  mcvt_vis.py  sct_vis.py
